@@ -1,3 +1,12 @@
+2008-10-24  Joe English  <jenglish@users.sourceforge.net>
+
+	* tests/ttk/ttk.test: Disable test ttk-6.3, it's not 
+	applicable [Bug 2175411].
+
+	* generic/ttk/ttkTheme.c: Use different Tcl_AssocData key
+	so the tile extension can be loaded into an 8.6 interp,
+	in the off-chance that anyone wants to do this.
+
 2008-10-24  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tkCanvUtil.c (TkSmoothPrintProc): Corrected 'const'ness to
